5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1712_2498.log
== TEST (2019-05-08 14:50:43) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2):
	num = num + num1
	cont = cont + 1
	num1 = int(input("numero de A: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num1 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:50:54) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2):
	num = num + num1
	cont = cont + 1
	num1 = int(input("numero de A: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num1 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:41) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2):
	num = num + num1
	cont = cont + 1
	num1 = int(input("numero de A: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num1 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:54:16) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	num = num + num1
	cont = cont + 1
	num1 = int(input("numero de A: "))
if(num1 > num2):
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num1 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:54:38) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	num = num + num1
	cont = cont + 1
if(num1 > num2):
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num1 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:17:56) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	num1 = (num1/100)
	num2 = num1 + num2
	num = num + num1
	cont = cont + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num1 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:18:42) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
	print(cont)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:27:47) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
	print(cont)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:33:03) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
if(num1 > num2) or (num1 == num2):
	
	
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:33:20) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
if(num1 > num2) or (num1 == num2):
	per1 = (per1/100)
	per2 = per1 + per2
	
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:33:45) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
if(num1 > num2) or (num1 == num2):
	per1 = (per1/100)
	per2 = per1 + (per2*100)
	
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:33) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
if(num1 > num2) or (num1 == num2):
	per1 = (per1/100)
	per2 = per1 + (per2*100)
	print(cont)
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:59) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num = 0 			#qtd de populacao
cont = 0 		#qtd de anos

while(num1 < num2) and (per1 > per2):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
if(num1 > num2) or (num1 == num2):
	per1 = (per1/100)
	per2 = per1 + (per2*100)
	print(num)
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:41:29) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
vca = num1 + ((num1 * per1)/100)
vcb = num2 + ((num2 * per2)/100)

while(vca < vcb):
	per1 = (per1/100)
	per2 = per1 + per2
	num = num + num1
	cont = cont + 1
if(num1 > num2) or (num1 == num2):
	per1 = (per1/100)
	per2 = per1 + (per2*100)
	print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num = num + num1
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:42:31) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
vca = num1 + ((num1 * per1)/100)
vcb = num2 + ((num2 * per2)/100)
n = 1
while(vca < vcb):
	vca = num1 + ((num1 * per1)/100)
	vcb = num2 + ((num2 * per2)/100)
	n = n + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num = num + num1
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:43:34) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num1 = num1 + ((num1 * per1)/100)
num2 = num2 + ((num2 * per2)/100)
n = 1
while(vca < vcb):
	num1 = num1 + ((num1 * per1)/100)
	num2 = num2 + ((num2 * per2)/100)
	n = n + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(vca < vcb):
NameError: name 'vca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:43:56) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num1 = num1 + ((num1 * per1)/100)
num2 = num2 + ((num2 * per2)/100)
n = 1
while(num1 < num2):
	num1 = num1 + ((num1 * per1)/100)
	num2 = num2 + ((num2 * per2)/100)
	n = n + 1
print(n)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:44:08) 
-- CODE:
num1 = int(input("numero de A: "))
num2 = int(input("numero de B: "))
per1 = float(input("perA: "))
per2 = float(input("perB: "))
num1 = num1 + ((num1 * per1)/100)
num2 = num2 + ((num2 * per2)/100)
n = 1
while(num1 < num2):
	num1 = num1 + ((num1 * per1)/100)
	num2 = num2 + ((num2 * per2)/100)
	n = n + 1
print(n)
-- EXECUTION TIME:
0.158993
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
